# ceres_test

data/: from_pts.txt  optimization_test.m  optimization_test.m~  sim3_approximate.txt  sim3_converged.txt  to_pts.txt
project/: CMakeLists.txt
project/include/: myCeresSolver.h
project/src/: main.cpp  myCeresSolver.cpp
